Add explodedWar gradle task
- war 압축 푸는 Gradle Task 추가

--- a/build.gradle
+++ b/build.gradle
@@ -19,3 +19,9 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+// war 풀기
+task explodedWar(type: Copy) {
+    into "$buildDir/exploded"
+    with war
+}
